--- a/app/assets/stylesheets/timeline.css.scss
+++ b/app/assets/stylesheets/timeline.css.scss
@@ -1,6 +1,6 @@
 .timeline {
   position: relative;
-  padding: 2em 0;
+  padding: 2em 0 4em 0;
 
   &:before {
     /* this is the vertical line */
